Scrollbar bug fix

--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,10 @@ body {
   color: white;
   font-family: 'Roboto', sans-serif;
 }
-    ::-webkit-scrollbar {
-      z-index: 10;
-    }
+
+::-webkit-scrollbar {
+  display: none;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
